@@ -704,7 +704,6 @@ function system_handle_form_submit() {
     }
   }  
 
-
   // Does the form have any defined submit_handler's?  If not, let's assign it the
   // default of callback_submit().    
   $submit_handlers = $form["#submit_handlers"];
@@ -748,7 +747,7 @@ function system_handle_form_submit() {
 
   if (!form_has_errors()) {
     // No errors from the validate, so let's continue.
-    
+ 
     // Is this a "system settings" form, or a normal form?
     if ($form_type == "system_settings") {
       // This is system settings, so let's save all of our values to the variables table.
@@ -763,8 +762,9 @@ function system_handle_form_submit() {
     }
 
     // Let's go through the form's submit handlers now.
-    foreach ($submit_handlers as $submit_callback) {          
+    foreach ($submit_handlers as $submit_callback) {                
       if (function_exists($submit_callback)) {
+        //call_user_func($submit_callback, $form, &$form_state);        
         call_user_func_array($submit_callback, array($form, &$form_state));
       }    
     }
